# reargs

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  readme.md  requirements.txt  run.sh
.github/workflows/: cd.yml  ci.yml
input/: article_2.txt  article_4.txt  article_5.txt
src/: main.py  models.py
src/chroma_db/: chroma_db.py
src/engine/: chunk_sentences.py  reargs_engine.py
src/functions/: get_article.py  get_articles.py  transform_article.py  transform_articles.py  write_article.py  write_articles.py  write_output.py
src/lib/: markdown_processor.py  pdf_processor.py
src/reargs_engine/: chunk_paragraphs.py  chunk_sentences.py  reargs_engine.py
src/reargs_llm/: prompt_template.py  reargs_llm.py
src/tests/: test_chunk_paragraphs.py  test_chunk_sentences.py  test_pdf_processor.py  test_reargs_engine.py  tests_chunk_paragraphs.py  tests_chunk_sentences.py  tests_create_cluster_map.py  tests_create_output_map.py  tests_get_clusters.py
src/utils/: chunk_paragraphs.py  chunk_sentences.py  constants.py  create_cluster_map.py  create_output_map.py  get_clusters.py  separators.py  transform_sentences.py
transforms/: article.txt  article_2.txt  article_3.txt  article_4.txt
